# Compiladors

./: CMakeLists.txt  README.md
Diagrames de Flux/: Flux_parser.ini  Input_Output_Diagram.md  parser_flux.md
outputs/: input-example_pp.c
src/: input-example.c  input-example.h  main.c  main.h
src/module_args/: module_args.c  module_args.h
src/module_comments_remove/: CMakeLists.txt  module_comments_remove.c  module_comments_remove.h
src/module_define/: module_define.c  module_define.h
src/module_errors/: module_errors.c  module_errors.h
src/module_ifdef_endif/: module_ifdef_endif.c
src/module_include/: module_include.c  module_include.h
src/module_macros/: module_macros.c
src/module_parser/: module_parser.c  module_parser.h
tests/: header1.h  header2.h  test_missing_include.c  test_module_2.c  test_recursive_include.c
